highlight working, need to fix spacing and formatting and starting over

--- a/static/css/sudoku.css
+++ b/static/css/sudoku.css
@@ -25,14 +25,14 @@ h6 {
     letter-spacing: 1px;
 }
 p {
-    margin: 0 0 25px;
+    margin: 0;
     font-size: 18px;
     line-height: 1.5;
 }
 
 @media(min-width:768px) {
     p {
-        margin: 0 0 35px;
+        margin: 0;
         font-size: 20px;
         line-height: 1.6;
     }
@@ -184,21 +184,6 @@ a:focus {
     }
 }
 
-.btn-circle {
-    width: 70px;
-    height: 70px;
-    margin-top: 15px;
-    padding: 7px 16px;
-    border: 2px solid #fff;
-    border-radius: 100%!important;
-    font-size: 40px;
-    color: #fff;
-    background: 0 0;
-    -webkit-transition: background .3s ease-in-out;
-    -moz-transition: background .3s ease-in-out;
-    transition: background .3s ease-in-out;
-}
-
 .btn-circle:hover,
 .btn-circle:focus {
     outline: 0;
@@ -258,22 +243,10 @@ a:focus {
     }
 }
 
-.content-section {
-    padding-top: 100px;
-    padding-bottom: 100px;
-
-}
-
 .download-section {
     width: 100%;
     padding: 50px 0;
     color: #fff;
-}
-
-#map {
-    width: 100%;
-    height: 200px;
-    margin-top: 100px;
 }
 
 @media(min-width:767px) {
@@ -285,10 +258,15 @@ a:focus {
         padding: 100px 0;
     }
 
-    #map {
-        height: 400px;
-        margin-top: 250px;
-    }
+}
+.control-button{
+    padding: 4px;
+    margin-bottom: 40px;
+    margin-left: 4px;
+    margin-right: 4px;
+    border-radius: 4px;
+    border: #324A45 1px solid;
+
 }
 
 .btn {
@@ -299,13 +277,21 @@ a:focus {
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
-    color: #324A45;
+    color: #c;
 }
 
-.btn-board{
+.btn-board, button{
     color: #324A45;
     font-family: 'Open Sans',"Helvetica Neue",Helvetica,Arial,sans-serif;
 
+}
+
+hr {
+    margin: 5px;
+}
+
+table{
+    margin: 0 auto;
 }
 
 .btn-default {
@@ -319,11 +305,25 @@ a:focus {
     border: 1px solid #42dca3;
     outline: 0;
     color: #000;
-    background-color: #42dca3;
+    background-color: #42dca3;  
 }
 
 ul.banner-social-buttons {
     margin-top: 0;
+}
+
+#numbers{
+    margin-bottom: 40px
+    margin-top: 0;
+}
+
+
+#numbers, #controls{
+    display: flex;
+    flex-wrap: no-wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 }
 
 @media(max-width:1199px) {
@@ -345,11 +345,12 @@ ul.banner-social-buttons {
 }
 
 footer {
-    padding: 50px 0;
+    padding: 30px 0;
 }
 
 footer p {
     margin: 0;
+    font-size: 20px
 }
 
 ::-moz-selection {
@@ -378,29 +379,29 @@ body {
 
 .flash {
   -moz-animation: flash 1s ease-out;
-  -moz-animation-iteration-count: 1;
+  -moz-animation-iteration-count: 10;
 
   -webkit-animation: flash 1s ease-out;
-  -webkit-animation-iteration-count: 1;
+  -webkit-animation-iteration-count: 10;
 
   -ms-animation: flash 1s ease-out;
-  -ms-animation-iteration-count: 1;
+  -ms-animation-iteration-count: 10;
 }
 
 @-webkit-keyframes flash {
     0% { background-color: none; }
-    50% { background-color: #fbf8b2; }
+    50% { background-color: #C4A58C; }
     100% { background-color: none; }
 }
 
 @-moz-keyframes flash {
     0% { background-color: none; }
-    50% { background-color: #fbf8b2; }
+    50% { background-color: #C4A58C; }
     100% { background-color: none; }
 }
 
 @-ms-keyframes flash {
     0% { background-color: none; }
-    50% { background-color: #fbf8b2; }
+    50% { background-color: #C4A58C; }
     100% { background-color: none; }
 }
